<resources>
    <string name="app_name">Book My Book</string>
    <string name="hello">Bonjour</string>
    <string name="your_loans">Vos prêts</string>
    <string name="scan">Scanner</string>
    <string name="books">Livres</string>
    <string name="home">Home</string>
    <string name="library">Librairie</string>
    <string name="cover">Cover</string>
    <string name="title_place_holder">Title Place Holder</string>
    <string name="author_place_holder">Author Place Holder</string>
    <string name="isbn_form_hint">ISBN*</string>
    <string name="author_form_hint">Auteur*</string>
    <string name="title_form_hint">Titre*</string>
    <string name="add_book_fb">Ajouter un livre</string>
    <string name="add_loan_fb">Ajouter un prêt</string>
    <string name="save_form_button">Enregistrer</string>
    <string name="url_image_form_hint">Url cover</string>
    <string name="search_bar_hint">Quel livre recherchez-vous ?</string>
    <string name="informations_form_pholder">Informations</string>
    <string name="delete_button">Supprimer</string>
    <string name="loan_button">Prêter</string>
    <string name="description_place_holder">Description Place Holder</string>
    <string name="details_header">Détails</string>
    <string name="isbn_place_holder">ISBN Place Holder</string>
    <string name="description_form_hint">Description</string>
    <string name="how_to_scan">Scannez un livre pour le rechercher.</string>
    <string name="lblContact">Contact</string>
    <string name="btnContactChoice">Choisir un contact</string>
    <string name="lblDuration">Quelle est la date de fin ?</string>
    <string name="lblBookToLoan">Livre à prêter</string>
    <string name="btnLoan">Prêter</string>
    <string name="contact_place_holder">Contact Place Holder</string>
    <string name="days_left">Jour restants</string>
</resources>