<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lpodev.bookmybook.fragments.list.ListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_list">
        <action
            android:id="@+id/action_navigation_home_to_scanFragment"
            app:destination="@id/navigation_scan" />
        <action
            android:id="@+id/action_navigation_home_to_libraryFragment"
            app:destination="@id/navigation_library" />
    </fragment>
    <fragment
        android:id="@+id/navigation_scan"
        android:name="com.lpodev.bookmybook.fragments.scan.ScanFragment"
        android:label="@string/scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/navigation_library"
        android:name="com.lpodev.bookmybook.fragments.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_addBookFragment"
            app:destination="@id/addBookFragment" />
        <action
            android:id="@+id/action_navigation_library_to_detailFragment"
            app:destination="@id/detailFragment" />
        <argument
            android:name="search_query"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>
    <fragment
        android:id="@+id/addBookFragment"
        android:name="com.lpodev.bookmybook.fragments.add.AddBookFragment"
        android:label="@string/add_book_fb"
        tools:layout="@layout/fragment_add_book" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.lpodev.bookmybook.fragments.detail.DetailFragment"
        android:label="@string/details_header"
        tools:layout="@layout/fragment_details" >
        <argument
            android:name="currentBook"
            app:argType="com.lpodev.bookmybook.models.Book" />
    </fragment>

    <action
        android:id="@+id/action_searchQuery"
        app:destination="@+id/navigation_library"/>

</navigation>