<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.BookMyBook"
    tools:context=".fragments.addLoan.AddLoanFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblBookToLoan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lblBookToLoan"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/bookSelector"
                style="@style/SpinnerStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/lblContact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lblContact"
                android:textSize="20sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minHeight="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="10dp">

                <EditText
                    android:id="@+id/edtContact"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="48dp"
                    android:background="@color/lighterGrey"
                    android:clickable="true"
                    android:drawableStart="@drawable/perso"
                    android:drawablePadding="10dp"
                    android:drawableTint="@color/black"
                    android:editable="false"
                    android:padding="8dp"
                    android:text="@string/btnContactChoice"
                    android:textAlignment="textStart"
                    android:textColor="@color/black" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/lblDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/lblDuration"
                android:textSize="20sp" />

            <DatePicker
                android:id="@+id/endDatePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"
                android:theme="@style/DatePickerStyle" />

            <Button
                android:id="@+id/btnAddLoan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/btn_primary"
                android:text="@string/btnLoan"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>